// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayList should render a ClayList with classes 1`] = `<ul class="list-group show-quick-actions-on-hover elementClasses my-custom-class"></ul>`;

exports[`ClayList should render a ClayList with id 1`] = `<ul class="list-group show-quick-actions-on-hover" id="myId"></ul>`;

exports[`ClayList should render a ClayList with items 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a ClayList with items with description 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a ClayList with items with links 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a ClayList with simple items 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">Photos</li>
  <li class="list-group-item list-group-item-flex">Videos</li>
</ul>
`;

exports[`ClayList should render a ClayList with simple items with links 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">Photos</li>
  <li class="list-group-item list-group-item-flex">Videos</li>
</ul>
`;

exports[`ClayList should render a selectable ClayList 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="folder" value="1" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="folder" value="2" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with action menu 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with circle icons 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <h3 class="list-group-header-title">Folders</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Recipes</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </h4>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </h4>
      <p class="list-group-subtitle text-truncate">China</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Spain</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Italy</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Toledo</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Mexico</p>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Chefs</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Ferrán Adriá</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Gordon Ramsay</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Alberto Chicote</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with groups 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <h3 class="list-group-header-title">Folders</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Recipes</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </h4>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </h4>
      <p class="list-group-subtitle text-truncate">China</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Spain</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Italy</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Toledo</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Mexico</p>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Chefs</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Ferrán Adriá</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Gordon Ramsay</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Alberto Chicote</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with icons 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <h3 class="list-group-header-title">Folders</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Recipes</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </h4>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </h4>
      <p class="list-group-subtitle text-truncate">China</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Spain</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Italy</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Toledo</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Mexico</p>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Chefs</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Ferrán Adriá</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Gordon Ramsay</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Alberto Chicote</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with label 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <h3 class="list-group-header-title">Folders</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Photos</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
            <title>folder</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Videos</h4>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Recipes</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </h4>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
      <div class="list-group-detail">
        <span class="label label-success">No Spicy</span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </h4>
      <p class="list-group-subtitle text-truncate">China</p>
      <div class="list-group-detail">
        <span class="label label-warning">Spicy</span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Spain</p>
      <div class="list-group-detail">
        <span class="label label-success">No Spicy</span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Italy</p>
      <div class="list-group-detail">
        <span class="label label-success">No Spicy</span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Toledo</p>
      <div class="list-group-detail">
        <span class="label label-warning">Spicy</span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Mexico</p>
      <div class="list-group-detail">
        <span class="label label-danger">Very Spicy</span>
      </div>
    </div>
  </li>
  <li class="list-group-header">
    <h3 class="list-group-header-title">Chefs</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Ferrán Adriá</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Gordon Ramsay</h4>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Alberto Chicote</h4>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render a selectable ClayList with quick action menu 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Hamburger</a>
      </h4>
      <p class="list-group-subtitle text-truncate">U.S.A</p>
      <div class="list-group-detail">
        <span class="label label-success">No Spicy</span>
      </div>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item" href="#1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <title>trash</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item" href="#2">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <title>download</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Ramen</a>
      </h4>
      <p class="list-group-subtitle text-truncate">China</p>
      <div class="list-group-detail">
        <span class="label label-warning">Spicy</span>
      </div>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item" href="#1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <title>trash</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item" href="#2">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <title>download</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Paella</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Spain</p>
      <div class="list-group-detail">
        <span class="label label-success">No Spicy</span>
      </div>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item" href="#1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <title>trash</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item" href="#2">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <title>download</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Pizza</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Italy</p>
      <div class="list-group-detail">
        <span class="label label-success">No Spicy</span>
      </div>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item" href="#1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <title>trash</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item" href="#2">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <title>download</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Carcamusas</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Toledo</p>
      <div class="list-group-detail">
        <span class="label label-warning">Spicy</span>
      </div>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item" href="#1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <title>trash</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item" href="#2">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <title>download</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <span class="sticker-overlay">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-exclamation-circle">
            <title>exclamation-circle</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#exclamation-circle"></use>
          </svg>
        </span>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#">Tacos</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Mexico</p>
      <div class="list-group-detail">
        <span class="label label-danger">Very Spicy</span>
      </div>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item" href="#1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <title>trash</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item" href="#2">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <title>download</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled" type="button">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <title>ellipsis-v</title>
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Remove</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Download</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          </ul>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ClayList should render the default markup 1`] = `<ul class="list-group show-quick-actions-on-hover"></ul>`;
